k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heartbeat
  namespace: heartbeat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: heartbeat
  template:
    metadata:
      labels:
        app: heartbeat
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: heartbeat
          image: ghcr.io/nextdv/heartbeat-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
